--- a/etc/auth_bizno.html
+++ b/etc/auth_bizno.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="theme-color" content="transparent">
-	<title>KT ARS | 휴대폰 | 청구요금, 납부문의 | 명세서, 세금계산서 발송 | 세금계산서</title>
-	<link rel="stylesheet" href="../../assets/css/ui.css">
-	<script defer src="../../assets/js/ui.js"></script>
+	<title>KT ARS | 사용자 인증</title>
+	<link rel="stylesheet" href="../assets/css/ui.css">
+	<script defer src="../assets/js/ui.js"></script>
 </head>
 <body>
 	<div class="wrap">
@@ -16,12 +16,12 @@
 			<div class="header__inner">
 				<div class="header__util">
 					<a href="#" class="header__back"><span class="a11y">뒤로가기</span></a>
-					<h1 class="header__title">세금계산서</h1>
+					<h1 class="header__title">사용자 인증</h1>
 					<span class="header__time">00:13</span>
 				</div>
 				<div class="header__msgs">
 					<p class="header__msg">
-						<span class='highlight--cyan font-bd'>사업자번호 뒤 5자리</span>를<br>입력해 주세요.
+						<span class='highlight--cyan font-bd'>사업자번호 5자리</span>를<br>입력해 주세요.
 					</p>
 				</div>
 			</div>
@@ -32,10 +32,10 @@
 				<label for="authCode" class="a11y">사업자번호 뒤 5자리</label>
 				<input type="tel" id="authCode" class="auth__code" maxlength="5" placeholder="86011" oninput="inputEvent()">
 				<div class="button-rectangle__container">
-					<a href="#" id="confirm" class="button-rectangle button-rectangle__fill button-rectangle__fill--disabled">사용자 정보 확인</a>
+					<a href="#" id="confirm" class="button-rectangle button-rectangle__fill button-rectangle__fill--disabled">가입자 정보 확인</a>
 				</div>
 			</div>
-    </div>
+		</div>
 		<div class="quick-nav">
 			<ul class="quick-nav__list">
 				<li class="quick-nav__item"><a href="#" class="quick-nav__link">홈</a></li>
@@ -45,7 +45,7 @@
 			</ul>
 		</div>
 	</div>
-<script>
+	<script>
 	function inputEvent() {
 		var targetInput = document.getElementById("authCode");
 		var targetBtn = document.getElementById("confirm");
