--- a/home/qna/doc_tax-alter_auth.html
+++ b/home/qna/doc_tax-alter_auth.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="theme-color" content="transparent">
-	<title>KT ARS | 휴대폰 | 청구요금, 납부문의 | 명세서, 세금계산서 발송 | 세금계산서</title>
+	<title>KT ARS | 설치변경, 요금 등 일반문의 | 명세서, 세금계산서 발행</title>
 	<link rel="stylesheet" href="../../assets/css/ui.css">
 	<script defer src="../../assets/js/ui.js"></script>
 </head>
@@ -32,7 +32,14 @@
 				<label for="authCode" class="a11y">사업자번호 뒤 5자리</label>
 				<input type="tel" id="authCode" class="auth__code" maxlength="5" placeholder="86011" oninput="inputEvent()">
 				<div class="button-rectangle__container">
-					<a href="#" id="confirm" class="button-rectangle button-rectangle__fill button-rectangle__fill--disabled">사용자 정보 확인</a>
+					<a href="#" id="confirm" class="button-rectangle button-rectangle__fill button-rectangle__fill--disabled">가입자 정보 확인</a>
+				</div>
+			</div>
+			<div class="contents__etc">
+				<div class="bullet">
+					<p class="bullet__item bullet__item--info">세금계산서, 통신요금 내역, 수납 확인서는 kt.com 또는 마이 케이티 앱에서 확인 또는 출력하실 수 있습니다.
+						<a href="#" class="button-underline">kt.com 바로가기</a>
+					</p>
 				</div>
 			</div>
     </div>
@@ -45,7 +52,7 @@
 			</ul>
 		</div>
 	</div>
-<script>
+	<script>
 	function inputEvent() {
 		var targetInput = document.getElementById("authCode");
 		var targetBtn = document.getElementById("confirm");
