--- a/home/qna/doc_tax_success.html
+++ b/home/qna/doc_tax_success.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="theme-color" content="transparent">
-	<title>KT ARS | 휴대폰 | 청구요금, 납부문의 | 명세서, 세금계산서 발송 | 세금계산서</title>
+	<title>KT ARS | 설치변경, 요금 등 일반문의 | 명세서, 세금계산서 발행</title>
 	<link rel="stylesheet" href="../../assets/css/ui.css">
 	<script defer src="../../assets/js/ui.js"></script>
 </head>
@@ -21,21 +21,30 @@
 				</div>
 				<div class="header__msgs">
 					<p class="header__msg">
-						<span class='highlight--cyan font-bd'>사업자번호 뒤 5자리</span>를<br>입력해 주세요.
+						<span class='highlight--cyan font-bd'>세금계산서 발급 접수</span>가<br>완료되었습니다.
 					</p>
 				</div>
 			</div>
 		</header>
 		<!-- // header -->
 		<div class="contents">
-			<div class="auth">
-				<label for="authCode" class="a11y">사업자번호 뒤 5자리</label>
-				<input type="tel" id="authCode" class="auth__code" maxlength="5" placeholder="86011" oninput="inputEvent()">
-				<div class="button-rectangle__container">
-					<a href="#" id="confirm" class="button-rectangle button-rectangle__fill button-rectangle__fill--disabled">사용자 정보 확인</a>
+			<div class="contents__inner">
+				<div class="message">
+					<div class="message__ico">
+						<i class="ico__30x30 ico__30x30--complete"></i>
+					</div>
+					<p class="message__title">접수되었습니다.</p>
+					<p class="message__text">잠시 후 입력하신 팩스번호로 전송해 드리겠습니다.</p>
 				</div>
 			</div>
-    </div>
+			<div class="contents__etc">
+				<div class="bullet">
+					<p class="bullet__item bullet__item--info">세금계산서는 국세청 홈택스 (www.home tax.go.kr), kt 닷컴 내 마이 kt에서 직접 프린트 및 팩스 전송을 하실 수 있습니다.
+						<a href="#" class="button-underline">kt 닷컴 바로가기</a>
+					</p>
+				</div>
+			</div>
+		</div>
 		<div class="quick-nav">
 			<ul class="quick-nav__list">
 				<li class="quick-nav__item"><a href="#" class="quick-nav__link">홈</a></li>
@@ -45,13 +54,5 @@
 			</ul>
 		</div>
 	</div>
-<script>
-	function inputEvent() {
-		var targetInput = document.getElementById("authCode");
-		var targetBtn = document.getElementById("confirm");
-		targetInput.value = targetInput.value.replace(/[^0-9.]/g, '');
-		if (targetInput.value) {targetBtn.classList.remove("button-rectangle__fill--disabled")} else {targetBtn.classList.add("button-rectangle__fill--disabled")}
-	}
-	</script>
 </body>
 </html>
