--- a/home/rwd/sl_fail.html
+++ b/home/rwd/sl_fail.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="theme-color" content="transparent">
-	<title>KT ARS | 휴대폰 | 청구요금, 납부문의 | 명세서, 세금계산서 발송 | 세금계산서</title>
+	<title>KT ARS | 장애인 시나리오 | 수어(수화)상담 | 상담사 연결</title>
 	<link rel="stylesheet" href="../../assets/css/ui.css">
 	<script defer src="../../assets/js/ui.js"></script>
 </head>
@@ -16,26 +16,28 @@
 			<div class="header__inner">
 				<div class="header__util">
 					<a href="#" class="header__back"><span class="a11y">뒤로가기</span></a>
-					<h1 class="header__title">세금계산서</h1>
+					<h1 class="header__title">상담사 연결</h1>
 					<span class="header__time">00:13</span>
 				</div>
 				<div class="header__msgs">
 					<p class="header__msg">
-						<span class='highlight--cyan font-bd'>사업자번호 뒤 5자리</span>를<br>입력해 주세요.
+						<span class='highlight--cyan font-bd'>상담사 연결 예약</span>이<br>불가합니다.
 					</p>
 				</div>
 			</div>
 		</header>
 		<!-- // header -->
 		<div class="contents">
-			<div class="auth">
-				<label for="authCode" class="a11y">사업자번호 뒤 5자리</label>
-				<input type="tel" id="authCode" class="auth__code" maxlength="5" placeholder="86011" oninput="inputEvent()">
-				<div class="button-rectangle__container">
-					<a href="#" id="confirm" class="button-rectangle button-rectangle__fill button-rectangle__fill--disabled">사용자 정보 확인</a>
+			<div class="contents__inner">
+				<div class="message">
+					<div class="message__ico">
+						<i class="ico__30x30 ico__30x30--fail"></i>
+					</div>
+					<p class="message__title">죄송합니다.</p>
+					<p class="message__text">현재 이용자가 많아 지연되고 있습니다. <br>잠시 후 다시 이용해 주시기 바랍니다.</p>
 				</div>
 			</div>
-    </div>
+		</div>
 		<div class="quick-nav">
 			<ul class="quick-nav__list">
 				<li class="quick-nav__item"><a href="#" class="quick-nav__link">홈</a></li>
@@ -45,13 +47,5 @@
 			</ul>
 		</div>
 	</div>
-<script>
-	function inputEvent() {
-		var targetInput = document.getElementById("authCode");
-		var targetBtn = document.getElementById("confirm");
-		targetInput.value = targetInput.value.replace(/[^0-9.]/g, '');
-		if (targetInput.value) {targetBtn.classList.remove("button-rectangle__fill--disabled")} else {targetBtn.classList.add("button-rectangle__fill--disabled")}
-	}
-	</script>
 </body>
 </html>
