--- a/mobile/contraction/credit_limit.html
+++ b/mobile/contraction/credit_limit.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="theme-color" content="transparent">
-	<title>KT ARS | 휴대폰 | 요금제, 부가 서비스, 소액결제, 장기 혜택 쿠폰 | 소액결제 한도변경, 차단신청</title>
+	<title>KT ARS | 휴대폰 | 요금제, 부가서비스, 소액결제, 장기 혜택 쿠폰 | 소액결제 한도변경, 차단신청</title>
 	<link rel="stylesheet" href="../../assets/css/ui.css">
 	<script defer src="../../assets/js/ui.js"></script>
 </head>
@@ -15,13 +15,14 @@
 		<header class="header">
 			<div class="header__inner">
 				<div class="header__util">
-					<a href="#" class="header__back"><span class="a11y">뒤로가기</span></a>
-					<h1 class="header__title">소액결제 한도조회 및 변경</h1>
+					<a href="#" class="header__back"><span class="a11y">뒤로가기</span>
+						<h1 class="header__title">소액결제 한도조회 및 변경</h1>
+					</a>
 					<span class="header__time">00:13</span>
 				</div>
 				<div class="header__msgs">
 					<p class="header__msg">
-						<span class='highlight--cyan font-bd'>이번 달 소액결제 한도금액</span>을<br>확인해 드리겠습니다.
+						<span class='highlight--cyan font-bd'>이번 달 소액결제 한도금액</span>을 확인해 드리겠습니다.
 					</p>
 				</div>
 			</div>
@@ -31,7 +32,7 @@
 			<div class="contents__inner">
 				<div class="account">
 					<div class="account__header">
-						<p class="account__text">이번달 소액결제 한도금액</p>
+						<p class="account__text">이번 달 소액결제 한도금액입니다.</p>
 						<p class="account__price">
 							400,000<span class="account__unit">원</span>
 						</p>
@@ -39,7 +40,7 @@
 					<div class="account__list">
 						<ul class="account__set">
 							<li class="account__row">
-								<div class="account__left">이번달 사용 가능 금액</div>
+								<div class="account__left">이번 달 사용 가능 금액</div>
 								<div class="account__right">
 									<span class="account__price">234,890<span class="account__unit">원</span></span>
 								</div>
@@ -51,8 +52,8 @@
               <div class="form-field__inner">
                 <div class="form-field__item">
                   <div class="form-field__field">
-                    <input type="checkbox" id="checkbox1" class="form-field__checkbox" checked>
-                    <label for="checkbox1">하향금액 직접 입력</label>
+                    <input type="radio" name="select" id="radio1" class="form-field__radio" checked>
+                    <label for="radio1">하향금액 직접 입력</label>
                   </div>
                   <div class="form-field__field">
                     <label for="selfWrite" class="a11y">직접 입력</label>
@@ -65,8 +66,8 @@
               <div class="form-field__inner">
                 <div class="form-field__item">
                   <div class="form-field__field">
-                    <input type="checkbox" id="checkbox2" class="form-field__checkbox">
-                    <label for="checkbox2">4만 원으로 하향</label>
+                    <input type="radio" name="select" id="radio2" class="form-field__radio">
+                    <label for="radio2">4만 원으로 하향</label>
                   </div>
                 </div>
               </div>
@@ -75,8 +76,8 @@
               <div class="form-field__inner">
                 <div class="form-field__item">
                   <div class="form-field__field">
-                    <input type="checkbox" id="checkbox3" class="form-field__checkbox">
-                    <label for="checkbox3">12만 원으로 하향</label>
+                    <input type="radio" name="select" id="radio3" class="form-field__radio">
+                    <label for="radio3">12만 원으로 하향</label>
                   </div>
                 </div>
               </div>
@@ -85,8 +86,8 @@
               <div class="form-field__inner">
                 <div class="form-field__item">
                   <div class="form-field__field">
-                    <input type="checkbox" id="checkbox4" class="form-field__checkbox">
-                    <label for="checkbox4">18만 원으로 하향</label>
+                    <input type="radio" name="select" id="radio4" class="form-field__radio">
+                    <label for="radio4">18만 원으로 하향</label>
                   </div>
                 </div>
               </div>
@@ -95,8 +96,8 @@
               <div class="form-field__inner">
                 <div class="form-field__item">
                   <div class="form-field__field">
-                    <input type="checkbox" id="checkbox5" class="form-field__checkbox">
-                    <label for="checkbox5">30만 원으로 하향</label>
+                    <input type="radio" name="select" id="radio5" class="form-field__radio">
+                    <label for="radio5">30만 원으로 하향</label>
                   </div>
                 </div>
               </div>
@@ -109,7 +110,7 @@
 			</div>
 			<div class="contents__etc">
 				<div class="button-rectangle__container">
-					<a href="#" class="button-rectangle button-rectangle__line">한도금액 상향 상담사 연결</a>
+					<a href="#" class="button-rectangle button-rectangle__line">한도금액 상향 <i class="ico__30x30 ico__30x30--call"></i>상담사 연결</a>
 				</div>
 				<div class="bullet">
           <p class="bullet__item bullet__item--info">ARS를 통한 한도 조정은 하향 조정만 가능하며, 상향 조정은 상담사를 통해 가능합니다.</p>
