--- a/mobile/account/account_check-arrears_no.html
+++ b/mobile/account/account_check-arrears_no.html
@@ -15,8 +15,9 @@
 		<header class="header">
 			<div class="header__inner">
 				<div class="header__util">
-					<a href="#" class="header__back"><span class="a11y">뒤로가기</span></a>
-					<h1 class="header__title">청구요금 확인</h1>
+					<a href="#" class="header__back"><span class="a11y">뒤로가기</span>
+						<h1 class="header__title">청구요금 확인</h1>
+					</a>
 					<span class="header__time">00:13</span>
 				</div>
 				<div class="header__msgs">
@@ -61,7 +62,7 @@
 				<div class="button-rectangle__container">
 					<a href="#" class="button-rectangle button-rectangle__line">실시간 요금 조회</a>
 					<a href="#" class="button-rectangle button-rectangle__line">납부전용계좌 안내</a>
-					<a href="#" class="button-rectangle button-rectangle__line">상담사 연결</a>
+					<a href="#" class="button-rectangle button-rectangle__line"><i class="ico__30x30 ico__30x30--call"></i>상담사 연결</a>
 				</div>
 				<div class="bullet">
 					<p class="bullet__item bullet__item--info">요금 정산기간에는 전월요금이 미납요금에 반영 되지 않을 수 있습니다.</p>
